# ERNIE-varlen-demo

./: Dockerfile  README.md  benchmark-mig.sh  benchmark.sh  perf_template.sh  run.sh
logs/: benchmark.09-28-11-48-00.csv
scripts/: build.sh  cbenchmark.py  launch.sh  parse_time.py  utils.py
src/: CMakeLists.txt  inference.cc  inference.cu
