CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(ERNIE-varlen LANGUAGES CUDA)

ADD_COMPILE_OPTIONS(-O3)

SET(FLUID_INC_PATH ${FLUID_INFER_LIB}/paddle/include)
SET(FLUID_LIB_PATH ${FLUID_INFER_LIB}/paddle/lib)

SET(GLOG_INC_PATH ${FLUID_INFER_LIB}/third_party/install/glog/include)
SET(GLOG_LIB_PATH ${FLUID_INFER_LIB}/third_party/install/glog/lib)

SET(GFLAGS_INC_PATH ${FLUID_INFER_LIB}/third_party/install/gflags/include)
SET(GFLAGS_LIB_PATH ${FLUID_INFER_LIB}/third_party/install/gflags/lib)

INCLUDE_DIRECTORIES(${FLUID_INC_PATH})
INCLUDE_DIRECTORIES(${GLOG_INC_PATH})
INCLUDE_DIRECTORIES(${GFLAGS_INC_PATH})
INCLUDE_DIRECTORIES(${CUDA_ROOT}/include)

LINK_DIRECTORIES(${FLUID_LIB_PATH})
LINK_DIRECTORIES(${GLOG_LIB_PATH})
LINK_DIRECTORIES(${GFLAGS_LIB_PATH})
LINK_DIRECTORIES(${CUDA_ROOT}/lib)

ADD_EXECUTABLE(inference inference.cu)

TARGET_LINK_LIBRARIES(inference dl paddle_inference glog gflags pthread)
set_property(TARGET inference PROPERTY CXX_STANDARD 17)
